--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.3",
+    "i18next": "^23.7.16",
+    "lucide-react": "^0.263.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@supabase/supabase-js": "^2.39.3",
-    "lucide-react": "^0.263.1",
-    "react-i18next": "^13.5.0",
-    "i18next": "^23.7.16"
+    "react-hot-toast": "^2.6.0",
+    "react-i18next": "^13.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -32,4 +33,5 @@
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
   }
+
 }
